--- a/RubyOnRails/RoR-mysql/VagrantFile
+++ b/RubyOnRails/RoR-mysql/VagrantFile
@@ -95,33 +95,33 @@ Vagrant.configure(2) do |config|
   # Puppet, Chef, Ansible, Salt, and Docker are also available. Please see the
   # documentation for more information about their specific syntax and use.
   config.vm.provision "shell", inline: <<-SHELL
-    sudo apt-get update -y
+    sudo apt-get update
     sudo apt-get upgrade -y
-    
+
     sudo update-alternatives --set editor /usr/bin/vim.basic
     sudo echo "America/Toronto" > /etc/timezone
     sudo dpkg-reconfigure -f noninteractive tzdata
-    
+
     # Install GIT
     sudo apt-get install -y git
-    
+
     # Install MySql with username 'root' and password '#{mysql_root_password}'
     sudo debconf-set-selections <<< 'mysql-server mysql-server/root_password password #{mysql_root_password}'
     sudo debconf-set-selections <<< 'mysql-server mysql-server/root_password_again password #{mysql_root_password}'
-    sudo apt-get install -y mysql-server mysql-client libmysqlclient-dev # libmysqlclient-dev for mysql gem 
+    sudo apt-get install -y mysql-server mysql-client libmysqlclient-dev # libmysqlclient-dev for mysql gem
     sudo sed -i 's/127.0.0.1/#{private_ip}/g' /etc/mysql/my.cnf
     sudo service mysql restart
     mysql --user="root" --password="#{mysql_root_password}" --execute="GRANT ALL PRIVILEGES ON *.* TO 'root'@'%' IDENTIFIED BY '#{mysql_root_password}';"
-    
-    
+
+
     # Install PGP key and add HTTPS support for APT (Passenger)
     sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 561F9B9CAC40B2F7
     sudo apt-get install -y apt-transport-https ca-certificates
-    
+
     # Add APT repository (Passenger)
     sudo sh -c 'echo deb https://oss-binaries.phusionpassenger.com/apt/passenger trusty main > /etc/apt/sources.list.d/passenger.list'
     sudo apt-get update
-  
+
     # Install Passenger + Nginx
     sudo apt-get install -y nginx nginx-extras passenger
     sudo cp /etc/nginx/nginx.conf /etc/nginx/nginx.conf.backup
@@ -130,17 +130,14 @@ Vagrant.configure(2) do |config|
     ln -s /etc/nginx/sites-available/local.conf /etc/nginx/sites-enabled/local.conf
     sudo rm -rf /etc/nginx/sites-enabled/default
     sudo service nginx restart
-    
+
     # Install Node.js
     sudo apt-get install -y nodejs
-    
+
     # Install NTP
     sudo apt-get install -y ntp
-    
-    sudo apt-get update -y
-    sudo apt-get upgrade -y
   SHELL
-  
+
   config.vm.provision "shell", privileged: false, inline: <<-SHELL
     # Install RVM
     command curl -sSL https://rvm.io/mpapis.asc | gpg --import -
@@ -150,15 +147,15 @@ Vagrant.configure(2) do |config|
     rvm install 2.1.2
     rvm use 2.1.2 --default
     rvm rubygems current
-    
+
     # Go to /vagrant folder on vagrant ssh right away
     echo "cd /vagrant" >> ~/.bashrc
     cd /vagrant
-    
+
     # Install Bundler
     gem install --no-ri --no-rdoc bundler
     bundle install --path vendor/bundle
-    
+
     # Initialize db
     bin/rake db:create
     bin/rake db:migrate
@@ -170,7 +167,7 @@ Vagrant.configure(2) do |config|
     git config --global user.email '#{email}'
   SHELL
 
-  
+
   config.vm.provision "shell", inline: <<-SHELL
     sudo service nginx restart
     sudo service mysql restart
