--- a/NodeJS/node-js-neo4j/VagrantFile
+++ b/NodeJS/node-js-neo4j/VagrantFile
@@ -104,12 +104,20 @@ Vagrant.configure(2) do |config|
     # Install GIT
     sudo apt-get install -y git
 
+    # Java 8
+    echo "deb http://ppa.launchpad.net/webupd8team/java/ubuntu trusty main" | sudo tee /etc/apt/sources.list.d/webupd8team-java.list
+    echo "deb-src http://ppa.launchpad.net/webupd8team/java/ubuntu trusty main" | sudo tee -a /etc/apt/sources.list.d/webupd8team-java.list
+    sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys EEA14886
+    echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | sudo /usr/bin/debconf-set-selections
+    sudo apt-get update -y
+    sudo apt-get install -y oracle-java8-installer
+    sudo apt-get install -y oracle-java8-set-default
+
     # Neo4j
     wget -O - http://debian.neo4j.org/neotechnology.gpg.key | apt-key add -
     echo 'deb http://debian.neo4j.org/repo stable/' > /etc/apt/sources.list.d/neo4j.list
     sudo apt-get update
     sudo apt-get install -y neo4j
-    #sudo sed -i 's/127.0.0.1/127.0.0.1,#{private_ip}/g' /etc/mongod.conf
     sudo service neo4j-service restart
 
     # Add HTTPS support for APT
