--- a/NodeJS/node-js-orientdb/server-conf/vagrant-local.conf
+++ b/NodeJS/node-js-orientdb/server-conf/vagrant-local.conf
@@ -1,6 +1,6 @@
 server {
         listen 80 default_server;
-        server_name fbadd.local;
+        server_name test.local;
         root /vagrant/public;
 
         # The following deploys your Ruby/Python/Node.js/Meteor app on Passenger.
